# onionpack

./: Cargo.toml  README.md  UNPACK_EXAMPLE.md
examples/: expand_derives.rs  expand_fields.rs  full.rs  minimal.rs
src/: lib.rs  onion.rs  utils.rs
