[package]
name = "onionpack"
description = "Unpack your structs into DTOs, Entities and Schemas."
version = "1.0.0"
repository = "https://github.com/h4-h/onionpack"
readme = "README.md"
license = "MIT"
keywords = [ "derive", "macros", "proc-macro" ]
edition = "2021"
exclude = [ ".gitignore" ]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = [ "full", "parsing" ] }
quote = "1.0"
proc-macro2 = "1.0"
